--- a/DoneWithIt/package.json
+++ b/DoneWithIt/package.json
@@ -23,7 +23,9 @@
     "react-native-web": "^0.20.0",
     "react-navigation": "^5.0.0",
     "expo-location": "~18.1.6",
-    "react-native-maps": "1.20.1"
+    "react-native-maps": "1.20.1",
+    "expo-image-picker": "~16.1.4",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
