--- a/DoneWithIt/package.json
+++ b/DoneWithIt/package.json
@@ -25,7 +25,8 @@
     "expo-location": "~18.1.6",
     "react-native-maps": "1.20.1",
     "expo-image-picker": "~16.1.4",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
